test/parser/positive/CharLiterals.java
public class CharLiterals {
  public CharLiterals() {}
  protected char x = 'a';
}
