test/parser/negative/MultiField.java
public class MultiField {
    public MultiField() {}
    public MultiField a, b;
}
